@startuml 01_domain_core
/'
MÔ TẢ SƠ ĐỒ
Mục tiêu: Mô hình hóa các thực thể tĩnh (Domain Entities) cốt lõi của hệ thống quản lý trung tâm.
Phạm vi: Người dùng (User, Teacher, Student/Parent) và cơ sở vật chất, khóa học (Room, Program, Course, Class, Schedule).
Assumptions:
- Student và Parent có thể gộp chung hoặc liên kết 1-nhiều. Theo yêu cầu, gộp chung hoặc liên kết phụ huynh vào User. Ở đây User tách role Teacher và Student/Parent.
- Class (Lớp học) là một thực thể cụ thể khai giảng từ một Course (Khóa học).
- Schedule/TimeSlot áp dụng Thông tư 29 (không có ca học sau 22h).
'/

title Class Diagram - Core Domain Modules

' Enums
enum UserRole {
  ADMIN
  TEACHER
  STUDENT
  PARENT
  COMPLIANCE_OFFICER
}

enum ClassStatus {
  PLANNING
  ACTIVE
  COMPLETED
  CANCELLED
}

' Classes
class User {
  + id : UUID
  + username : String
  + password_hash : String
  + full_name : String
  + email : String
  + phone : String
  + role : UserRole
  + is_active : Boolean
  + created_at : DateTime
}

class Teacher {
  + id : UUID
  + user_id : UUID
  + degree : String
  + teaching_subjects : List<String>
  + max_hours_per_week : Int
}

class Student {
  + id : UUID
  + user_id : UUID
  + parent_name : String
  + parent_phone : String
  + gpa : Float
}

class Program {
  + id : UUID
  + title : String
  + description : String
  + target_audience : String
}

class Course {
  + id : UUID
  + program_id : UUID
  + name : String
  + syllabus : String
  + total_hours : Int
}

class Room {
  + id : UUID
  + name : String
  + capacity : Int
  + room_type : String
  + is_active : Boolean
}

class Class {
  + id : UUID
  + course_id : UUID
  + name : String
  + expected_students : Int
  + status : ClassStatus
  + start_date : Date
  + end_date : Date
}

class ClassStudent {
  + class_id : UUID
  + student_id : UUID
  + enroll_date : Date
}

class Schedule {
  + id : UUID
  + class_id : UUID
  + teacher_id : UUID
  + room_id : UUID
  + day_of_week : Int
  + start_time : Time
  + end_time : Time
  __ constraints __
  + end_time <= 22:00 (TT29/BGDĐT)
}

class Lesson {
  + id : UUID
  + schedule_id : UUID
  + date : Date
  + content_journal : String
}

' Relationships
User <|-- Teacher : "Extends/Has"
User <|-- Student : "Extends/Has"

Program "1" *-- "0..*" Course : contains
Course "1" *-- "0..*" Class : creates

Class "1" o-- "0..*" ClassStudent : enrolls
Student "1" *-- "0..*" ClassStudent : joins

Class "1" *-- "0..*" Schedule : has multiple slots
Schedule "1" o-- "1" Teacher : assigned
Schedule "1" o-- "1" Room : booked

Schedule "1" *-- "0..*" Lesson : generates actual sessions

@enduml
